dnl -*- m4 -*-

AC_INIT(configure.in)
AC_CONFIG_AUX_DIR(config-aux)
AM_INIT_AUTOMAKE(sampler,0.0)

AC_MSG_CHECKING(for CIL build tree)
AC_ARG_WITH(cil, [  --with-cil=DIR          CIL build tree], , with_cil=../cil)
if ! test -d "$with_cil"; then
  AC_MSG_ERROR(cannot find CIL build tree; please use --with-cil=DIR)
fi
case $with_cil in
  (/*) CIL_HOME=$with_cil ;;
  (*) CIL_HOME="\$(top_builddir)$with_cil" ;;
esac
AC_SUBST(CIL_HOME)
AC_MSG_RESULT($CIL_HOME)

dnl : ${CXX:=g++3}
: ${CXXFLAGS:=-g -W -Wall -Werror}

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LEX

AC_DISABLE_SHARED
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_C_INLINE
AC_EGREP_CPP(inline, inline, 
  AC_DEFINE(HAVE_INLINE, 1,
	   [Define to tell GSL that we can handle inline functions.])
)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(
Makefile
benchmarks/ccured/config.mk
fuzz/Makefile
instrumentor/branches/libbranches/Makefile
instrumentor/daikon/libdaikon/Makefile
instrumentor/daikount/libdaikount/Makefile
libcountdown/Makefile
liblog/Makefile
mining/Makefile
mining/libodbc++/Makefile
mining/populate/Makefile
)
